[project]
name = "pychargecloud"
version = "0.2.3"
dependencies = [
    "aiohttp",
    "yarl",
    "pydantic>=1.0.0, <3.0.0",
]
readme = "README.md"
license = {text = "GNU General Public License v3 or later (GPLv3+)"}
description = "Access public ev charger information via chargecloud.de"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
authors = [
    { name = "functionpointer", email = "suspendfunction@gmail.com" },
]

[project.urls]
homepage = "https://github.com/functionpointer/pychargecloud"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
