[metadata]
name = pychargecloud
description = Access public ev charger information via chargecloud.de
long_description = file: README.md
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.10
install_requirements =
    aiohttp
    yarl
    pydantic

[options.packages.find]
where=src